# DeeBee

./: .gitignore  README.md  agents.md  pyproject.toml
.github/: FUNDING.yml
deebee/: __init__.py  cli.py  gui.py  imdb_client.py  movie_renamer.py  rename_common.py  renamer.py  tv_renamer.py  tvdb_client.py
tests/: conftest.py  test_imdb_client.py  test_renamer.py  test_tvdb_client.py
